[package]
name = "bunqledger"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
isahc = { version = "0.9.8", features = ["json"] }
dotenv = "0.15.0"
openssl = "0.10.30"
