[package]
name = "bunq"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
isahc = { version = "0.9.8", features = ["json"] }
dotenv = "0.15.0"
openssl = "0.10.30"
serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
base64 = "0.12.3"
confy = "0.4.0"
