[package]
name = "bunq"
version = "0.1.0"
description = "Rust Wrapper for the Bunq API"
keywords = ["bunq", "api"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuri91/bunq-rs"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0.32"
isahc = { version = "0.9.8", features = ["json"] }
dotenv = "0.15.0"
openssl = "0.10.30"
serde_json = "1.0.57"
serde = { version = "1.0.116", features = ["derive"] }
base64 = "0.12.3"
confy = "0.4.0"
